<resources>
    <string name="title_activity_login">Вход</string>
    <string name="title_fragment_sign_in">Вход</string>
    <string name="title_fragment_sign_up">Регистрация</string>
    <string name="title_fragment_recover_password">Забыл пароль</string>
    <string name="or_register">или зарегистрироваться</string>
    <string name="sign_via_email">Войти с помощью эл. почты</string>
    <string name="sign_via_vkontakte">Войти с помощью Вконтакте</string>
    <string name="sign_via_facebook">Войти с помощью Facebook</string>
    <string name="btn_i_have_not_registered">Я ещё не зарегистрирован</string>
    <string name="btn_i_have_registered">Я уже зарегистрирован</string>
    <string name="btn_i_forgot_password">Я забыл пароль</string>
    <string name="reset_password">Сбросить пароль</string>
    <string name="activity_login_intro">Это\u00A0<b>дневник,</b>\nв\u00A0который хочется\nписать каждый день</string>
    <string name="prompt_email_or_slug">Электронная почта или ник</string>
    <string name="prompt_email">Электронная почта</string>
    <string name="prompt_slug">Ник.taaasty.com</string>
    <string name="prompt_password">Пароль</string>
    <string name="action_sign_in">Войти</string>
    <string name="action_sign_in_short">Войти</string>
    <string name="action_sign_up">Зарегистрироваться</string>
    <string name="action_sign_up_short">Создать</string>
    <string name="error_invalid_email">Логин слишком короткий</string>
    <string name="error_invalid_password">Пароль слишком короткий</string>
    <string name="error_invalid_email_or_password">Неправильный логин или пароль</string>
    <string name="error_password_field_required">Пароль не указан</string>
    <string name="error_email_field_required">Логин не указан</string>
    <string name="error_vkontakte_failed">Ошибка вконтакте</string>
    <string name="error_facebook_failed">Ошибка facebook</string>
    <string name="error_socket_timeout">Время ожидания истекло</string>
    <string name="images_directory">Тейсти</string>
    <string name="tabbar_my_feed_content_description">Мой Дневник</string>
    <string name="btn_tabbar_live_description">Прямой эфир</string>
    <string name="btn_tabbar_action_notifications">Оповещения</string>
    <string name="feed_item_image_content_description">Открыть на весь экран</string>
    <string name="feed_item_more_content_description">Еще действия</string>
    <string name="title_live_feed">Прямой эфир</string>
    <string name="title_best_feed">Лучшее</string>
    <string name="title_anonymous_feed">Анонимки</string>
    <string name="title_news">Новости</string>
    <string name="title_activity_following_followers">Подписки</string>
    <string name="title_followings">Вы подписаны</string>
    <string name="title_followers">Ваши подписчики</string>
    <string name="title_friends">Друзья</string>
    <string name="title_requests">Заявки</string>
    <string name="title_text_post">Текстовый пост</string>
    <string name="title_image_post">Изображение</string>
    <string name="title_quote_post">Цитата</string>
    <string name="title_anonymous_post">Анонимка</string>
    <string name="title_create_flow">Новый поток</string>
    <string name="title_embedd_post">Ссылка</string>
    <string name="activity_settings">Настройки</string>
    <plurals name="public_records_last_day">
        <item quantity="one">%d публикация за сутки</item>
        <item quantity="few">%d публикации за сутки</item>
        <item quantity="many">%d публикаций за сутки</item>
        <item quantity="other">%d публикаций за сутки</item>
    </plurals>
    <string name="user_avatar_content_description">Информация о пользователе</string>
    <string name="additional_menu">Дополнительное меню</string>
    <string name="friends">Друзья</string>
    <string name="settings">Настройки</string>
    <string name="title_hidden_entries">Скрытые записи</string>
    <string name="title_favorites">Избранное</string>
    <string name="title_support">Поддержка</string>
    <string name="server_error">Ошибка связи с сервером</string>
    <string name="error_loading_comments">Ошибка загрузки комментариев</string>
    <string name="error_report_to_comment">Ошибка отправки жалобы</string>
    <string name="error_post_comment">Ошибка отправки комментария</string>
    <string name="error_loading_user">Ошибка загрузки пользователя</string>
    <string name="error_loading_relationships">Ошибка загрузки подписок</string>
    <string name="error_loading_image">Ошибка загрузки изображения</string>
    <string name="error_iframely_unsupported">Ссылка не поддерживается</string>
    <string name="error_loading_iframely_info">Ошибка загрузки информации о ссылке</string>
    <string name="error_follow">Ошибка подписки</string>
    <string name="error_vote">Ошибка голосования</string>
    <string name="error_upload_userpic">Ошибка загрузки изображения</string>
    <string name="error_tlog_access_denied">Извините, но\u00A0доступ к\u00A0данному тлогу и\u00A0его\u00A0записям ограничен его владельцем.</string>
    <string name="error_flow_access_denied">Извините, но\u00A0доступ к\u00A0данному потоку и\u00A0его\u00A0записям ограничен его владельцем.</string>
    <string name="error_post_not_found">Такой публикации не существует. Скорее всего, она была удалена автором</string>
    <string name="no_records">Нет записей</string>
    <string name="no_flows">Нет потоков</string>
    <string name="you_have_no_subscriptions">Вы ещё ни на что не подписались</string>
    <string name="you_have_not_written_anything">Вы пока ничего не написали</string>
    <string name="user_have_not_written_anything">Пользователь пока ничего не написал</string>
    <string name="friends_have_not_written_anything">Ваши друзья пока ничего не написали</string>
    <string name="you_have_no_private_records">У вас нет скрытых записей</string>
    <string name="you_have_no_favorite_records">У вас нет избранных записей</string>
    <string name="title_activity_show_post">Запись</string>
    <string name="title_activity_comments">Комментарии</string>
    <string name="you_have_subscribed_button">Вы подписаны</string>
    <string name="subscribe_button">Подписаться</string>
    <string name="title_my_subscriptions">Мои подписки</string>
    <string name="title_flows">Потоки</string>
    <string name="search">Поиск</string>
    <plurals name="posts_title">
        <item quantity="one">пост</item>
        <item quantity="few">поста</item>
        <item quantity="many">постов</item>
        <item quantity="other">постов</item>
    </plurals>
    <string name="text_post_content_description">Текстовый пост</string>
    <string name="image_post_content_description">Пост — изображение</string>
    <string name="quote_post_content_description">Пост — цитата</string>
    <string name="embedd_post_content_description">Пост по ссылке</string>
    <string name="is_private_post_content_description">Приватный пост</string>
    <string name="is_with_voting">С голосованием</string>
    <string name="create_post_button_content_description">Опубликовать пост</string>
    <string name="add_comment_hint">Добавить комментарий</string>
    <string name="action_back_content_description">назад</string>
    <string name="title_share_twitter">Twitter</string>
    <string name="title_share_facebook">Facebook</string>
    <string name="title_share_vkontakte">Вконтакте</string>
    <string name="add_post_to_favorites">В избранное</string>
    <string name="title_share_other">Ещё</string>
    <string name="copy_link_to_clipboard">Ссылка</string>
    <string name="report_post_to_moderator">Пожаловаться</string>
    <string name="edit_post">Изменить</string>
    <string name="delete_post">Удалить</string>
    <string name="save_post">Сохранить</string>
    <string name="repost">Репост</string>
    <string name="menu_refresh">Обновить</string>
    <string name="menu_settings">Настройки</string>
    <string name="menu_friends">Друзья</string>
    <string name="menu_support">Поддержка</string>
    <string name="menu_favorites">Избранное</string>
    <string name="menu_hidden">Скрытые записи</string>
    <string name="menu_quit">Выйти</string>
    <string name="profile_category_title">Профиль</string>
    <string name="title_user_name">Имя</string>
    <string name="title_tlog_title">Описание тлога</string>
    <string name="title_tlog_summary">Введите небольшое описание вашего тлога</string>
    <string name="title_is_privacy">Закрытый дневник?</string>
    <string name="title_is_female">Вы — девушка?</string>
    <string name="title_email">Емейл</string>
    <string name="summary_email">Укажите емейл для того, чтобы получать уведомления</string>
    <string name="is_privacy_summary">Тлог виден только подписчикам, стать которым можно после одобрения. Ну и вам конечно.</string>
    <string name="is_female_summary">На Тейсти сложилось так, что 7 из 10 пользователей — это девушки. Поэтому по-умолчанию для всех именно такая настройка.</string>
    <string name="dialog_title_name">Выберите имя</string>
    <string name="dialog_tlog_title">Описание тлога</string>
    <string name="dialog_email_title">Емейл</string>
    <string name="title_available_notifications">Уведомления</string>
    <string name="summary_available_notifications">Отправлять мне емейл уведомления обо всех новых комментариях, подписчиках и личных сообщениях?</string>
    <string name="status_bar_notifications_turned_on">Включены</string>
    <string name="status_bar_conversations_settings">Переписки</string>
    <string name="setup_notifications_on_new_messages">Настройка оповещений о новых сообщениях в переписках</string>
    <string name="status_bar_notifications_settings">Прочие события</string>
    <string name="setup_notifications_on_new_notifications">Настройка оповещений о прочих событиях</string>
    <string name="status_bar_notifications_vibrate">Вибрация</string>
    <string name="status_bar_notifications_sound">Звук</string>
    <string name="status_bar_notifications_lights">Световой индикатор</string>
    <string name="reset_preferences">Сбросить</string>
    <string name="reset_preferences_summary">Восстановить значения по умолчанию</string>
    <string name="notifications_category_title_events">События</string>
    <string name="notifications_events_title_votes_and_favorites">«Мне нравится»</string>
    <string name="notifications_events_summary_votes_and_favorites">Кто-то проголосовал за вашу запись, либо добавил себе в избранное</string>
    <string name="notifications_events_title_comments">Новые комментарии</string>
    <string name="notifications_events_summary_comments">Появились новые комментарии в ваших статьях, либо статьях, на которые вы подписаны</string>
    <string name="notifications_events_title_followings">Подписки</string>
    <string name="notifications_events_summary_followings">Кто-то подписался на ваш тлог</string>
    <string name="notifications_events_title_following_request">Запросы на дружбу</string>
    <string name="notifications_events_summary_following_request">Кто-то спрашивает разрешение на чтение вашего тлога</string>
    <string name="notifications_events_title_following_approve">Одобрение дружбы</string>
    <string name="notifications_events_summary_following_approve">Кто-то разрешил вам читать тлог</string>
    <string name="notifications_events_title_mentions">Упоминания</string>
    <string name="notifications_events_summary_mentions">Вас упомянули в статье или комментарии</string>
    <string name="fab_list_item_create_flow">Создать поток</string>
    <string name="fab_list_item_create_anonymous_post">Анонимка</string>
    <string name="fab_list_item_create_text_post">Текст в дневник</string>
    <string name="fab_list_item_create_image_post">Картинка в дневник</string>
    <string name="login_or_register_to_add_comment">Войдите или зарегистрируйтесь, чтобы оставить комментарий</string>
</resources>