<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="status_bar_notifications_settings"
    android:summary="@string/setup_notifications_on_new_notifications"
    android:title="@string/status_bar_notifications_settings">

    <android.support.v7.preference.SwitchPreferenceCompat
        android:key="pref_key_enable_status_bar_notifications_notifications"
        android:title="@string/status_bar_notifications_turned_on" />

    <CheckBoxPreference
        android:dependency="pref_key_enable_status_bar_notifications_notifications"
        android:key="pref_key_status_bar_notifications_notifications_vibrate"
        android:title="@string/status_bar_notifications_vibrate" />

    <CheckBoxPreference
        android:dependency="pref_key_enable_status_bar_notifications_notifications"
        android:key="pref_key_status_bar_notifications_notifications_sound"
        android:title="@string/status_bar_notifications_sound" />

    <CheckBoxPreference
        android:dependency="pref_key_enable_status_bar_notifications_notifications"
        android:key="pref_key_status_bar_notifications_notifications_lights"
        android:title="@string/status_bar_notifications_lights" />

    <PreferenceCategory
        android:dependency="pref_key_enable_status_bar_notifications_notifications"
        android:title="@string/notifications_category_title_events">

        <CheckBoxPreference
            android:dependency="pref_key_enable_status_bar_notifications_notifications"
            android:key="pref_key_status_bar_notifications_notifications_events_votes_favorites"
            android:summary="@string/notifications_events_summary_votes_and_favorites"
            android:title="@string/notifications_events_title_votes_and_favorites" />

        <CheckBoxPreference
            android:dependency="pref_key_enable_status_bar_notifications_notifications"
            android:key="pref_key_status_bar_notifications_notifications_events_new_comments"
            android:summary="@string/notifications_events_summary_comments"
            android:title="@string/notifications_events_title_comments" />

        <CheckBoxPreference
            android:dependency="pref_key_enable_status_bar_notifications_notifications"
            android:key="pref_key_status_bar_notifications_notifications_events_following"
            android:summary="@string/notifications_events_summary_followings"
            android:title="@string/notifications_events_title_followings" />

        <CheckBoxPreference
            android:dependency="pref_key_enable_status_bar_notifications_notifications"
            android:key="pref_key_status_bar_notifications_notifications_events_following_request"
            android:summary="@string/notifications_events_summary_following_request"
            android:title="@string/notifications_events_title_following_request" />

        <CheckBoxPreference
            android:dependency="pref_key_enable_status_bar_notifications_notifications"
            android:key="pref_key_status_bar_notifications_notifications_events_following_approve"
            android:summary="@string/notifications_events_summary_following_approve"
            android:title="@string/notifications_events_title_following_approve" />

        <CheckBoxPreference
            android:dependency="pref_key_enable_status_bar_notifications_notifications"
            android:key="pref_key_status_bar_notifications_notifications_events_mentions"
            android:summary="@string/notifications_events_summary_mentions"
            android:title="@string/notifications_events_title_mentions" />

    </PreferenceCategory>

    <Preference
        android:key="reset_notifications_notifications_preferences"
        android:persistent="false"
        android:summary="@string/reset_preferences_summary"
        android:title="@string/reset_preferences" />

</PreferenceScreen>