<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/menu_refresh"
        android:title="@string/menu_refresh"
        app:showAsAction="never"/>

    <item android:id="@+id/menu_favorites"
        android:title="@string/menu_favorites"
        app:showAsAction="never"/>

    <item android:id="@+id/menu_hidden"
        android:title="@string/menu_hidden"
        app:showAsAction="never"/>

    <item android:id="@+id/menu_friends"
        android:title="@string/menu_friends"
        app:showAsAction="never"/>

    <item android:id="@+id/menu_support"
        android:title="@string/menu_support"
        app:showAsAction="never"/>

    <item android:id="@+id/menu_settings"
        android:title="@string/menu_settings"
        app:showAsAction="never"/>

    <item android:id="@+id/menu_quit"
        android:title="@string/menu_quit"
        app:showAsAction="never"/>
</menu>