<android.support.design.widget.CoordinatorLayout
    android:id="@+id/container"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.post.SharePostActivity"
    >

        <View
            android:id="@+id/touch_outside"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:soundEffectsEnabled="false"/>

        <android.support.v7.widget.GridLayout
            app:alignmentMode="alignBounds"
            android:id="@+id/bottom_bar_content"
            app:columnCount="@integer/share_post_column_count"
            app:columnOrderPreserved="true"
            android:clickable="true"
            android:layout_gravity="top|center_vertical"
            app:layout_behavior="android.support.design.widget.BottomSheetBehavior"
            style="@style/ShareBottomSheetStyle">

            <TextView
                android:id="@+id/ic_share_vkontankte"
                android:gravity="center"
                style="@style/ShareIconItem"
                android:drawableTop="@drawable/ic_share_vkontakte"
                android:onClick="shareVkontakte"
                android:paddingLeft="0dp"
                android:text="@string/title_share_vkontakte"/>

            <TextView
                android:id="@+id/ic_share_facebook"
                style="@style/ShareIconItem"
                android:drawableTop="@drawable/ic_share_facebook"
                android:onClick="shareFacebook"
                android:text="@string/title_share_facebook"/>


            <TextView
                android:id="@+id/ic_share_twitter"
                style="@style/ShareIconItem"
                android:drawableTop="@drawable/ic_share_twitter"
                android:onClick="shareTwitter"
                android:text="@string/title_share_twitter"/>

            <TextView
                android:id="@+id/ic_share_other"
                style="@style/ShareIconItem"
                android:drawableTop="@drawable/ic_share_other"
                android:onClick="shareOther"
                android:text="@string/title_share_other"/>

            <View
                android:layout_width="0dp"
                android:layout_height="20dp"
                android:background="@drawable/select_share_method_horiz_divider"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                app:layout_columnSpan="@integer/share_post_column_count"
                app:layout_gravity="fill_horizontal"/>

            <TextView
                android:id="@+id/ic_add_post_to_favorites"
                style="@style/ShareIconItem"
                android:drawableTop="@drawable/ic_add_post_to_favorites"
                android:onClick="addToFavorites"
                android:paddingLeft="0dp"
                android:text="@string/add_post_to_favorites"/>

            <TextView
                android:id="@+id/ic_repost"
                style="@style/ShareIconItem"
                android:drawableTop="@drawable/ic_add_post_to_favorites"
                android:onClick="repost"
                android:paddingLeft="0dp"
                android:text="@string/repost"/>

            <TextView
                android:id="@+id/ic_link_to_post"
                style="@style/ShareIconItem"
                android:drawableTop="@drawable/ic_link_to_post"
                android:onClick="linkToPost"
                android:text="@string/copy_link_to_clipboard"/>

            <TextView
                android:id="@+id/ic_report_post"
                style="@style/ShareIconItem"
                android:drawableTop="@drawable/ic_report_post"
                android:onClick="reportPost"
                android:text="@string/report_post_to_moderator"/>

            <TextView
                android:id="@+id/ic_edit_post"
                style="@style/ShareIconItem"
                android:drawableTop="@drawable/ic_edit_post"
                android:onClick="editPost"
                android:text="@string/edit_post"/>

            <TextView
                android:id="@+id/ic_delete_post"
                style="@style/ShareIconItem"
                android:drawableTop="@drawable/ic_delete_post"
                android:onClick="deletePost"
                android:text="@string/delete_post"/>

            <TextView
                android:id="@+id/ic_save_post"
                style="@style/ShareIconItem"
                android:drawableTop="@drawable/ic_save_post"
                android:onClick="savePost"
                android:text="@string/save_post"/>
        </android.support.v7.widget.GridLayout>


</android.support.design.widget.CoordinatorLayout>


