<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.Toolbar
    android:id="@+id/toolbar"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:contentInsetLeft="0dp"
    app:contentInsetRight="8dp"
    app:navigationContentDescription="@string/action_back_content_description"
    app:navigationIcon="@drawable/ic_back"
    app:theme="@style/ToolbarThemeLight"
    tools:showIn="@layout/activity_create_post"
    android:layout_width="match_parent"
    android:layout_height="?actionBarSize"
    android:background="@android:color/white">

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical|right">

        <ru.taaasty.widgets.HintedExtendedImageView
            android:id="@+id/create_post_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical|end"
            android:clickable="true"
            android:contentDescription="@string/create_post_button_content_description"
            android:padding="4dp"
            android:scaleType="centerInside"
            android:src="@drawable/ic_create_post"/>

        <Button
            android:id="@+id/login_button"
            style="@style/GreenButton"
            android:text="@string/action_sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:layout_marginRight="4dp"
            android:visibility="gone"
            tools:visibility="visible"
            />


    </FrameLayout>

</android.support.v7.widget.Toolbar>